--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,7 +1,8 @@
 vich_uploader:
-    db_driver: orm
+  db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+  mappings:
+    product_image:
+      uri_prefix: "%product_images%"
+      upload_destination: "%kernel.project_dir%/public/images/products"
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
