--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
+        "@popperjs/core": "^2.11.2",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
         "autoprefixer": "^10.4.2",
         "core-js": "^3.0.0",
+        "jquery": "^3.6.0",
         "node-sass": "^7.0.1",
         "postcss": "^8.4.5",
         "postcss-loader": "^6.2.1",
