--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,10 @@
 security:
-  encoders:
+  enable_authenticator_manager: true
+  # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+  password_hashers:
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
     App\Entity\User:
-      algorithm: bcrypt
-  # enable_authenticator_manager: true
-  # # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-  # password_hashers:
-  #   Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
-  #   App\Entity\User:
-  #     algorithm: auto
+      algorithm: auto
 
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
@@ -23,6 +20,11 @@ security:
     main:
       lazy: true
       provider: app_user_provider
+      custom_authenticator: App\Security\AppCustomAuthenticator
+      logout:
+        path: app_logout
+        # where to redirect after logout
+        # target: app_any_route
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
@@ -33,8 +35,8 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    #- { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_USER }
 
 when@test:
   security:
