--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
   product_images: /images/products
+  foo: "%env(resolve:FOO)%"
 
 services:
   # default configuration for services in *this* file
